--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2842,13 +2842,13 @@ and felids \citep{li2019recombination}. Such conclusions are often based on
 the genomic interval lengths over which certain topological gene tree patterns 
 are observed. We suggest that such conclusions should be examined 
 critically when made without reference to a null model-based expectation.
-Our results show that waiting distances between topology changes can 
-exhibit high variance even in neutral scenarios depending on demographic 
-model parameters. 
-MS-SMC' based waiting distance expectations can provide a 
-null model for a more robust evolutionary hypothesis testing framework
-that takes into account the demographic history of populations.
-
+Our results show that neutral expectations for waiting distances between 
+genealogy changes can exhibit high variance, and that this variance will
+be spatially auto-correlated, such that a topology or clade may exist over
+long stretches of the genome simply by chance.
+The MS-SMC' can provide a null model for waiting distance expectations
+given an inferred demographic model, from which a more robust evolutionary 
+hypothesis testing framework can be implemented.
 
 % Our simulations show
 % that the mean and variance of waiting distance expectations 
