removed an unneeded reference

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -637,7 +637,7 @@ The waiting distances between recombination events that cause topology-change
 may be of greatest interest, as they leave the most detectable signatures 
 in sequence data and are relevant to expected gene tree distributions that form
 an important component of many MSC-based methods \citep{
-degnan2006discordance, baum_concordance_2007, knowles_estimating_2011}.
+degnan2009gene, baum_concordance_2007, knowles_estimating_2011}.
 % Just like for single-population models, 
 % the waiting distance until a topology-change event in this framework can include multiple
 % intervening recombination events of the no-change or tree-change type
