fixed highlight error, oops

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2558,10 +2558,10 @@ just one recombination event at a time.
 By contrast, the recent development of solutions for predicting 
 tree- and topology-change waiting distances under the SMC' \citep{deng_distribution_2021} 
 effectively adds two additional longer-range sources of information for 
-any position in a genome. \hl{In this original formulation, these distances are a 
+any position in a genome. \hl{In this original formulation,} these distances are a 
 result of the probabilities of different phenomenological outcomes of the 
 SMC’ process given a genealogy embedded in a single population coalescent
-model with constant $N_e$.}
+model with constant $N_e$.
 % ^prob worth cleaning up this sentence
 % within the constraints of a demographic model.
 %regardless of the outcome for the genealogy \citep{terhorst_etal}. 
@@ -2609,7 +2609,7 @@ a genealogy is expected to be observed. We demonstrated the accuracy of our
 implementation relative to stochastic simulations performed under both the 
 full coalescent with recombination and the SMC' approximation 
 \citep{hudson1983properties,wiuf_recombination_1999,mcvean2005approximating}. 
-\hl{Within our framework, MSC model parameters determine rates of coalescence 
+\hl{Within our framework, MSC model parameters determine rates of coalescence}
 in species tree intervals and prevent coalescence between lineages separated
 into different species tree intervals.
 %and dictate where coalescence may occur, 
@@ -2621,7 +2621,7 @@ The effects of MSC model parameters on spatial genealogical variation can be sta
 modeled and visualized (Fig.~\ref{fig:fig1}; Fig.~\ref{fig:figS-edge-probabilities}). 
 We show that the neutral rate
 of turnover in genealogies and topologies across a genome is highly 
-dependent on species tree model parameters.}
+dependent on species tree model parameters.
 % feels like disconnected sentences
 
 
