--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2559,7 +2559,10 @@ just one recombination event at a time.
 By contrast, the recent development of solutions for predicting 
 tree- and topology-change waiting distances under the SMC' \citep{deng_distribution_2021} 
 effectively adds two additional longer-range sources of information for 
-any position in a genome. \hl{In this original formulation,} these distances are a 
+any position in a genome. 
+% \hl{In this original formulation,} 
+\hl{In their model,}
+these distances are a 
 result of the probabilities of different phenomenological outcomes of the 
 SMC’ process given a genealogy embedded in a single population coalescent
 model with constant $N_e$.
@@ -2610,7 +2613,8 @@ a genealogy is expected to be observed. We demonstrated the accuracy of our
 implementation relative to stochastic simulations performed under both the 
 full coalescent with recombination and the SMC' approximation 
 \citep{hudson1983properties,wiuf_recombination_1999,mcvean2005approximating}. 
-\hl{Within our framework, MSC model parameters determine rates of coalescence}
+% \hl{Within our framework, MSC model parameters determine rates of coalescence}
+\hl{Within our framework, MSC model parameters determine probabilities of coalescence}
 in species tree intervals and prevent coalescence between lineages separated
 into different species tree intervals.
 %and dictate where coalescence may occur, 
@@ -2656,6 +2660,8 @@ impractical for estimating the persistence of \emph{individual} genealogies.
 analytical solutions also offer the opportunity to develop likelihood-based
 methods for fitting models that link MSC model parameters to ARGs.}
 %%feels out of place -- eg we haven't used the word "analytical" yet
+% I'm OK with it, I think.
+
 % inferring MSC models from ARGs, or ARGs from MSC models 
 % (discussed below).
 % framework sequences of observed waiting distances, helping infer MSC models from ARGs or
