fixed another highlight error, oops

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2795,10 +2795,10 @@ scale of entire chromosomes, and usually to samples that are modeled
 as being in a single population 
 \citep{rasmussen2014genome, kelleher2019inferring, speidel2019method}.
 However, ARGs can exist for any stretch of the genome, 
-including short aligned contigs, \hl{or genes,} and \hl{more recent methods can 
+including short aligned contigs, \hl{or genes,} and \hl{more recent methods can} 
 even infer ARGs conditional on a structured demographic model that 
 includes splits between more distantly related genomes 
-\citep{hubisz2020inference}.}
+\citep{hubisz2020inference}.
 % ^is the "or genes" important here?
 % ^the nod to argweaver-D feels out of sync with the first part of the sentence
 Although our example likelihood-based implementation of the MS-SMC' 
@@ -2861,7 +2861,7 @@ long stretches of the genome simply by chance.
 \hl{The MS-SMC' can provide a null model for waiting distance expectations
 given an inferred demographic model, from which a more robust evolutionary 
 hypothesis testing framework can be implemented.}
-%^I think this last sentence isn't necessary -- and the one before it makes 
+%^I think this last sentence inecessary -- and the one before it makes 
 % a slightly better final sentence!
 
 % Our simulations show
