small discussion edits

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2623,8 +2623,8 @@ into different species tree intervals.
 % For any MSC model, the effects of MSC parameters
 % with regard to genealogy turnover can be statistically 
 The effects of MSC model parameters on spatial genealogical variation can be statistically
-modeled and visualized (Fig.~\ref{fig:fig1}; Fig.~\ref{fig:figS-edge-probabilities}). 
-We show that the neutral rate
+modeled and visualized (Fig.~\ref{fig:fig1}; Fig.~\ref{fig:figS-edge-probabilities}), and 
+our examples show that the neutral rate
 of turnover in genealogies and topologies across a genome is highly 
 dependent on species tree model parameters.
 % feels like disconnected sentences
@@ -2656,9 +2656,10 @@ impractical for estimating the persistence of \emph{individual} genealogies.
 % many genealogies, for which individual distributions would need to be
 % generated for every tree in a sequence. 
 % Similarly, it did not... more here please.
-\hl{In addition to providing fast calculations of waiting distances, 
-analytical solutions also offer the opportunity to develop likelihood-based
-methods for fitting models that link MSC model parameters to ARGs.}
+%\hl{In addition to providing fast calculations of waiting distances, 
+%analytical solutions also offer the opportunity to develop likelihood-based
+The analytical solutions presented here not only enable fast calculations, but also the opportunity to develop likelihood-based
+methods for fitting models that link MSC model parameters to ARGs.
 %%feels out of place -- eg we haven't used the word "analytical" yet
 % I'm OK with it, I think.
 
@@ -2815,7 +2816,7 @@ we expect that many useful applications of the MS-SMC' will likely come
 from the inverse application: inferring ARGs given a parameterized species
 tree model. Or, from joint inference of both MSC models and ARGs. 
 We speculate that incorporating waiting distance expectations 
-between tree and topology-change events into likelihood calculations within
+between tree- and topology-change events into likelihood calculations within
 existing frameworks like ARGWeaver-D \citep{hubisz2020inference} 
 could improve both accuracy and convergence.
 
